fixed dynamic view height on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,7 +31,7 @@ button, a {
 .App {
     display: grid;
     grid-template-rows: auto 1fr;
-    min-height: 100vh;
+    min-height: 100dvh;
     overflow: hidden;
     background-color: #FFFFFF;
 }
